Simplified index.html to make the server run.

--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -3,7 +3,7 @@
     <a> todo: Add </a>
     {% for sighting in sightings %}
       <li>
-          {{ sighting.__str__() }}
+          {{ sighting.squirrel_id }}
           <a> todo: Edit </a>
       </li>
     {% endfor %}
