Fixed typo in latittude -> latitude

--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -3,7 +3,7 @@
     <a> todo: Add </a>
     {% for sighting in sightings %}
       <li>
-          {{ sighting.squirrel_id }} at ({{ sighting.latittude}} | {{ sighting.longitude }})
+          {{ sighting.squirrel_id }} at ({{ sighting.latitude}} | {{ sighting.longitude }})
           <a href="{% url 'tracker:update' sighting.squirrel_id %}">Edit</a>
       </li>
     {% endfor %}
