--- a/tracker/templates/tracker/map.html
+++ b/tracker/templates/tracker/map.html
@@ -46,7 +46,7 @@ attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStree
 <!-- L.Icon.Default.prototype.options.shadowSize = 15; -->
 <!-- L.Icon.Default.prototype.options.shadowAnchor = [0, 0]; -->
 {% for sighting in sightings %}
-var point_lat_lon = [{{ sighting.latitude }}, {{ sighting.longitude }}];
+var point_lat_lon = [{{ sighting.longitude }}, {{ sighting.latitude }}];
 var marker = L.marker(point_lat_lon).addTo(map);
 {% endfor %}
 </script>
