--- a/tracker/templates/tracker/create.html
+++ b/tracker/templates/tracker/create.html
@@ -1,4 +1,3 @@
-<!--tracker/templates/tracker/update.html-->
 <!doctype html>
 <style>
 .button {
@@ -18,9 +17,9 @@
   <body>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+          {{ form.as_p }}
         <br>
-        <input type="submit" name="Submit">
+        <input type="submit" name="Save">
         <a class="button" href="/sightings/">Cancel</a>
     </form>
   </body>
