--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -25,7 +25,7 @@ tr:hover {background-color:#f5f5f5;}
   {% if sightings %}
     <table>
       <tr>
-          <th></th>
+          <th> <a href="/sightings/add">Add</a> </th>
           <th>Sighting ID</th>
           <th>Coordinates</th>
           <th>Date</th>
