--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -21,7 +21,7 @@ tr:hover {background-color:#f5f5f5;}
 <body>
 
   <h2>Squirrel Sightings in Central Park</h2>
-
+  <h4><a href="/sightings/stats">Go to data analytics page</a> </h4>
   {% if sightings %}
     <table>
       <tr>
