--- a/tracker/templates/tracker/stats.html
+++ b/tracker/templates/tracker/stats.html
@@ -32,20 +32,24 @@ tr:hover {background-color:#f5f5f5;}
           <td>{{TotalNumber}}</td>
       </tr>
       <tr>
-          <td>Stat2</td>
-          <td>V2</td>
+          <td>RunPct</td>
+          <td>{{RunPct}}</td>
       </tr>
       <tr>
-          <td>Stat3</td>
-          <td>V3</td>
+          <td>ChasePct</td>
+          <td>{{ChasePct}}</td>
       </tr>
       <tr>
-          <td>Stat4</td>
-          <td>V4</td>
+          <td>ClimbPct</td>
+          <td>{{ClimbPct}}</td>
       </tr>
       <tr>
-          <td>Stat5</td>
-          <td>V5</td>
+          <td>EatPct</td>
+          <td>{{EatPct}}</td>
+      </tr>
+      <tr>
+          <td>ForagePct</td>
+          <td>{{ForagePct}}</td>
       </tr>
     </table>
     <br>
