--- a/tracker/templates/tracker/stats.html
+++ b/tracker/templates/tracker/stats.html
@@ -32,23 +32,23 @@ tr:hover {background-color:#f5f5f5;}
           <td>{{TotalNumber}}</td>
       </tr>
       <tr>
-          <td>RunPct</td>
+          <td>Percentage of squirrels running</td>
           <td>{{RunPct}}</td>
       </tr>
       <tr>
-          <td>ChasePct</td>
+          <td>Percentage of squirrels chasing</td>
           <td>{{ChasePct}}</td>
       </tr>
       <tr>
-          <td>ClimbPct</td>
+          <td>Percentage of squirrels climbing</td>
           <td>{{ClimbPct}}</td>
       </tr>
       <tr>
-          <td>EatPct</td>
+          <td>Pearcentage of squirrels eating</td>
           <td>{{EatPct}}</td>
       </tr>
       <tr>
-          <td>ForagePct</td>
+          <td>Percentage of squirrels foraging</td>
           <td>{{ForagePct}}</td>
       </tr>
     </table>
